app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    font-size: 10px;
    --size-xs: 11px;
    --size-sm: 12px;
    --size-base: 14px;
    --size-lg: 16px;
    --size-xl: 20px;
    --size-2xl: 20px;
    --size-3xl: 24px;
}

@media (min-width: 600px) {
    :root {
        font-size: 10px;
        --size-xs: 12px;
        --size-sm: 13px;
        --size-base: 14px;
        --size-lg: 16px;
        --size-xl: 18px;
        --size-2xl: 20px;
        --size-3xl: 24px;
    }
}

* {
    scroll-margin-top: 6rem;
    scroll-behavior: smooth;
}

body {
    @apply font-mono flex flex-col bg-bg text-fg px-8 pb-8 min-h-dvh text-base;
}

main {
    @apply flex flex-col gap-12 py-4 max-w-6xl mx-auto;
}

h1 {
    @apply text-accent-fg text-xl font-proto;
}

.section {
    @apply flex flex-col gap-2.5;

    .heading {
        @apply flex justify-between items-center;

        a {
            @apply font-proto text-base bg-blue-bg no-underline hover:underline cursor-pointer;
        }
    }

    .content {
        @apply flex flex-col gap-8;

        p {
            @apply gap-1 flow-root;
        }

        a {
            @apply text-blue-fg animate no-underline hover:underline underline-offset-2;
        }
    }
}

.animate {
    @apply transition-all duration-500 ease-in-out;
}

.center-row {
    @apply flex items-center gap-1;
}

.btn {
    @apply flex gap-2.5 px-4 py-1 items-center bg-fg text-bg text-base whitespace-nowrap;
}

.tag {
    @apply px-4 py-1 border rounded-sm;
}

pre {
    @apply bg-accent-bg border border-blue-fg my-4 relative flex flex-col gap-4;
}

pre code {
    @apply flex flex-col pt-0 p-4 overflow-x-scroll;
}

.hljs-comment { color: #656771; }
.hljs-quote { color: #656771; }
.hljs-keyword { color: #a188c3; }
.hljs-addition { color: #80aa6e; }
.hljs-selector-tag { color: #da72a2; }
.hljs-doctag { color: #a188c3; }
.hljs-literal { color: #d29146; }
.hljs-meta { color: #7aa8a7; }
.hljs-meta-string { color: #9cb67d; }
.hljs-number { color: #b4647f; }
.hljs-regexp { color: #f05c60; }
.hljs-string { color: #9cb67d; }
.hljs-name { color: #ba9a5e; }
.hljs-section { color: #da72a2; }
.hljs-selector-class { color: #a188c3; }
.hljs-selector-id { color: #a188c3; }
.hljs-title { color: #b4647f; }
.hljs-attr { color: #d29146; }
.hljs-attribute { color: #d29146; }
.hljs-class { color: #7aa8a7; }
.hljs-template-variable { color: #a7a9b5; }
.hljs-type { color: #7aa8a7; }
.hljs-variable { color: #bdbfcb; }
.hljs-bullet { color: #80aa6e; }
.hljs-link { color: #7aa8a7; }
.hljs-subst { color: #a7a9b5; }
.hljs-symbol { color: #b4647f; }
.hljs-built_in { color: #f05c60; }
.hljs-deletion { color: #f05c60; }
.hljs-formula { color: #d29146; }
.hljs-emphasis { font-style: italic; }
.hljs-strong { font-weight: bold; }

